Train flags updated. Model added to cam program

--- a/show_cam_on_binder.ipynb
+++ b/show_cam_on_binder.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "# Cargar modelo\n",
-    "yolov5 = torch.hub.load('.', 'custom', path='weights/best.pt', source='local', force_reload=True)"
+    "yolov5 = torch.hub.load('.', 'custom', path='weights/best.pt', source='local', force_reload=True)\n",
+    "#yolov5 = torch.hub.load('.', 'custom', path='runs/train/test/weights/best.pt', source='local', force_reload=True)"
    ]
   },
   {
