--- a/train_yolov5_on_binder.ipynb
+++ b/train_yolov5_on_binder.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "import train, os\n",
-    "train.run(data='dataset-mini.yaml',epochs=10, batch=2, weights='yolov5n.pt')\n",
-    "#os.system('python train.py --epochs 10 --batch 2 --data dataset-mini.yaml --weights yolov5n.pt --name test --exist-ok')"
+    "os.system('python train.py --epochs 10 --batch 1 --data dataset-mini.yaml --weights yolov5n.pt --name test --exist-ok --imgsz 256 --freeze 24')\n",
+    "#train.run(data='dataset-mini.yaml',epochs=10, batch=1, weights='yolov5n.pt', imgsz=256, freeze=24)"
    ],
    "metadata": {
     "collapsed": false,
